--- a/Baby Height Predictor/Baby Height Predictor/Base.lproj/Main.storyboard
+++ b/Baby Height Predictor/Baby Height Predictor/Base.lproj/Main.storyboard
@@ -10,6 +10,9 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
+        <array key="Roboto-Light.ttf">
+            <string>Roboto-Light</string>
+        </array>
         <array key="Roboto-Medium.ttf">
             <string>Roboto-Medium</string>
         </array>
@@ -593,6 +596,80 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fKG-Yp-osB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1833" y="133"/>
+        </scene>
+        <!--Height Picker Pop Up-->
+        <scene sceneID="SJx-F5-jXT">
+            <objects>
+                <viewController storyboardIdentifier="HeightPickerPopUpId" id="oI7-Xi-wt5" customClass="HeightPickerPopUp" customModule="Baby_Height_Predictor" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="yBu-aj-tiU">
+                        <rect key="frame" x="0.0" y="0.0" width="300" height="500"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="cin-4t-H0l">
+                                <rect key="frame" x="0.0" y="20" width="300" height="480"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="HeightSelectionPopUpCell1Id" rowHeight="45" id="gZ3-9f-F4t" customClass="HeightSelectionPopUpCell1" customModule="Baby_Height_Predictor" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="300" height="45"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="gZ3-9f-F4t" id="hCZ-Nd-5dr">
+                                            <rect key="frame" x="0.0" y="0.0" width="300" height="44.666666666666664"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5'5&quot;" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AkV-oI-gEK">
+                                                    <rect key="frame" x="92" y="10" width="94" height="24"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="24" id="NgV-5H-rdL"/>
+                                                        <constraint firstAttribute="width" constant="94" id="hfI-E0-F1I"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="Roboto-Light" family="Roboto" pointSize="16"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="AkV-oI-gEK" firstAttribute="leading" secondItem="hCZ-Nd-5dr" secondAttribute="leadingMargin" constant="76" id="6Px-MZ-ume"/>
+                                                <constraint firstItem="AkV-oI-gEK" firstAttribute="top" secondItem="hCZ-Nd-5dr" secondAttribute="topMargin" constant="-1" id="Bau-SK-uXR"/>
+                                                <constraint firstAttribute="bottom" secondItem="AkV-oI-gEK" secondAttribute="bottom" constant="10.666666666666664" id="nIa-cm-udw"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="heightLabel" destination="AkV-oI-gEK" id="R8W-ci-ujT"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="oI7-Xi-wt5" id="ak3-F4-8Tq"/>
+                                    <outlet property="delegate" destination="oI7-Xi-wt5" id="CmC-4W-ZEy"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="cin-4t-H0l" firstAttribute="leading" secondItem="V3B-Tf-reC" secondAttribute="leading" id="Flv-nW-eyP"/>
+                            <constraint firstItem="V3B-Tf-reC" firstAttribute="bottom" secondItem="cin-4t-H0l" secondAttribute="bottom" id="Pla-Rj-dqq"/>
+                            <constraint firstItem="cin-4t-H0l" firstAttribute="top" secondItem="V3B-Tf-reC" secondAttribute="top" id="XP2-N1-sEE"/>
+                            <constraint firstItem="V3B-Tf-reC" firstAttribute="trailing" secondItem="cin-4t-H0l" secondAttribute="trailing" id="yEF-80-gM2"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="V3B-Tf-reC"/>
+                    </view>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="300" height="500"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="size" keyPath="contentSizeInPopup">
+                            <size key="value" width="300" height="400"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="size" keyPath="landscapeContentSizeInPopup">
+                            <size key="value" width="400" height="200"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                    <connections>
+                        <outlet property="maintableView" destination="cin-4t-H0l" id="xQB-RT-qI2"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VyW-MD-0i8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2591" y="42"/>
         </scene>
     </scenes>
     <resources>
