--- a/Questionaaries/Questionaaries/Base.lproj/Main.storyboard
+++ b/Questionaaries/Questionaaries/Base.lproj/Main.storyboard
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="oGf-hf-CBu">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +11,121 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Questionaaries" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Are you currently taking any medications?" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="idv-34-pmJ">
+                                <rect key="frame" x="34" y="140" width="345" height="80"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="345" id="DJV-gH-GgC"/>
+                                    <constraint firstAttribute="height" constant="80" id="QOE-aS-3EZ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ZiT-Ht-Ujr">
+                                <rect key="frame" x="28" y="117" width="353" height="282"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="282" id="RzO-ll-blM"/>
+                                    <constraint firstAttribute="width" constant="353" id="brV-zj-E1h"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="bLU-cp-QUg"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="F17-1D-FdQ"/>
+                                </connections>
+                            </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EUF-DH-XBX">
+                                <rect key="frame" x="0.0" y="407" width="414" height="65"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ufq-eC-mS0">
+                                        <rect key="frame" x="37" y="12" width="86" height="40"/>
+                                        <color key="backgroundColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="MTV-nb-zGA"/>
+                                            <constraint firstAttribute="width" constant="86" id="oqX-mn-Irm"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                        <state key="normal" title="Yes">
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="yesButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="w5C-PL-jvm"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dVN-19-5HN">
+                                        <rect key="frame" x="269" y="12" width="86" height="42"/>
+                                        <color key="backgroundColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="42" id="2va-tS-wrW"/>
+                                            <constraint firstAttribute="width" constant="86" id="54U-8o-GSp"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                        <state key="normal" title="No">
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="noButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zN1-vI-sjX"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="ufq-eC-mS0" firstAttribute="leading" secondItem="EUF-DH-XBX" secondAttribute="leading" constant="37" id="YRY-As-5lP"/>
+                                    <constraint firstAttribute="height" constant="65" id="eyB-3u-Tmc"/>
+                                    <constraint firstAttribute="trailing" secondItem="dVN-19-5HN" secondAttribute="trailing" constant="59" id="ggx-3Y-Meg"/>
+                                    <constraint firstItem="dVN-19-5HN" firstAttribute="leading" secondItem="ufq-eC-mS0" secondAttribute="trailing" constant="146" id="l58-5n-QAo"/>
+                                    <constraint firstItem="ufq-eC-mS0" firstAttribute="top" secondItem="EUF-DH-XBX" secondAttribute="top" constant="12" id="w0w-WW-HDw"/>
+                                    <constraint firstItem="dVN-19-5HN" firstAttribute="top" secondItem="EUF-DH-XBX" secondAttribute="top" constant="12" id="w1h-mU-rgs"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="ZiT-Ht-Ujr" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="29" id="5HS-Cf-QHs"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ZiT-Ht-Ujr" secondAttribute="trailing" constant="33" id="DF0-5F-h7E"/>
+                            <constraint firstItem="ZiT-Ht-Ujr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="28" id="L26-PG-aRl"/>
+                            <constraint firstItem="idv-34-pmJ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="34" id="R21-QQ-Cta"/>
+                            <constraint firstItem="EUF-DH-XBX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="f5P-wI-Z1T"/>
+                            <constraint firstItem="idv-34-pmJ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="52" id="fDD-X3-rfe"/>
+                            <constraint firstItem="EUF-DH-XBX" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="niW-0I-OYg"/>
+                            <constraint firstItem="EUF-DH-XBX" firstAttribute="top" secondItem="ZiT-Ht-Ujr" secondAttribute="bottom" constant="8" id="vRQ-kn-wKO"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="idv-34-pmJ" secondAttribute="trailing" constant="35" id="wVf-Lf-lOu"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="uvy-qa-M8o"/>
+                    <connections>
+                        <outlet property="mainTableView" destination="ZiT-Ht-Ujr" id="cmc-CX-sbw"/>
+                        <outlet property="noButtonOutlet" destination="dVN-19-5HN" id="6dk-77-mAB"/>
+                        <outlet property="questionLabel" destination="idv-34-pmJ" id="S44-AC-B38"/>
+                        <outlet property="yesButtonOutlet" destination="ufq-eC-mS0" id="gou-L7-WIN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1047.8260869565217" y="138.61607142857142"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="gWD-Rq-LIb">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="oGf-hf-CBu" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="qgj-xi-tF7">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="9TN-Bm-8FX"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gbU-vz-TH2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="138.61607142857142"/>
         </scene>
     </scenes>
 </document>
