--- a/Questionaaries/Questionaaries/Base.lproj/Main.storyboard
+++ b/Questionaaries/Questionaaries/Base.lproj/Main.storyboard
@@ -33,10 +33,6 @@
                                     <constraint firstAttribute="height" constant="282" id="RzO-ll-blM"/>
                                     <constraint firstAttribute="width" constant="353" id="brV-zj-E1h"/>
                                 </constraints>
-                                <connections>
-                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="bLU-cp-QUg"/>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="F17-1D-FdQ"/>
-                                </connections>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EUF-DH-XBX">
                                 <rect key="frame" x="0.0" y="407" width="414" height="65"/>
@@ -77,7 +73,6 @@
                                     <constraint firstItem="ufq-eC-mS0" firstAttribute="leading" secondItem="EUF-DH-XBX" secondAttribute="leading" constant="37" id="YRY-As-5lP"/>
                                     <constraint firstAttribute="height" constant="65" id="eyB-3u-Tmc"/>
                                     <constraint firstAttribute="trailing" secondItem="dVN-19-5HN" secondAttribute="trailing" constant="59" id="ggx-3Y-Meg"/>
-                                    <constraint firstItem="dVN-19-5HN" firstAttribute="leading" secondItem="ufq-eC-mS0" secondAttribute="trailing" constant="146" id="l58-5n-QAo"/>
                                     <constraint firstItem="ufq-eC-mS0" firstAttribute="top" secondItem="EUF-DH-XBX" secondAttribute="top" constant="12" id="w0w-WW-HDw"/>
                                     <constraint firstItem="dVN-19-5HN" firstAttribute="top" secondItem="EUF-DH-XBX" secondAttribute="top" constant="12" id="w1h-mU-rgs"/>
                                 </constraints>
@@ -108,6 +103,61 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1047.8260869565217" y="138.61607142857142"/>
+        </scene>
+        <!--Test-->
+        <scene sceneID="a2r-ne-OMf">
+            <objects>
+                <viewController storyboardIdentifier="QueDescription" id="QM3-vh-AcG" customClass="QueDescription" customModule="Questionaaries" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="QlN-CY-pyM">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name of the medication" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TH8-Xw-Ygw">
+                                <rect key="frame" x="20" y="108" width="347" height="22"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JSl-02-Ewu">
+                                <rect key="frame" x="20" y="138" width="347" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="QM3-vh-AcG" id="rR8-OT-X1o"/>
+                                </connections>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Describe the course of the medication" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9xO-Mr-TxC">
+                                <rect key="frame" x="22" y="188" width="347" height="22"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="k5A-lG-yib">
+                                <rect key="frame" x="22" y="218" width="347" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="QM3-vh-AcG" id="bCo-aC-fIy"/>
+                                </connections>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="XEQ-Kx-Qsf"/>
+                    </view>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Test" id="NJe-s0-bkB">
+                        <barButtonItem key="rightBarButtonItem" title="Save" id="hBY-OQ-oST"/>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZEh-bB-btN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1889.8550724637682" y="138.61607142857142"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="gWD-Rq-LIb">
